made the description nicer

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Flip",
     "version": "1.0.0",
-    "description": "Flips your messages.",
+    "description": "Flips your messages upsıpǝ poʍu",
     "author": "Tricked#3777",
     "license": "MIT"
   }
